cmake_minimum_required(VERSION 3.5.1)

project(advent_of_code_2019)

set(CMAKE_CXX_STANDARD 17)

add_executable(day01 src/day01/day1.cpp)
add_executable(day02 src/day02/day2.cpp)
add_executable(day03 src/day03/day3.cpp)
add_executable(day04 src/day04/day4.cpp)
add_executable(day05 src/day05/day5.cpp)
add_executable(day06 src/day06/day6.cpp)
add_executable(day07 src/day07/day7.cpp)
add_executable(day08 src/day08/day8.cpp)
